Added attraction min height

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
+    grid-auto-rows: minmax(1fr, auto);
 }
 
 /* using expanded grid syntax */
