Added generic box border class, Removed unused animations, Styled home page events, Removed orphaned images

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,35 +147,14 @@ main {
     position: relative;
 }
 
-.carousel .inner .item {
+.carousel .item {
     background: rgb(255, 255, 255);
     position: absolute;
     width: 100%;
     height: 100%;
-    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
-.carousel .inner .item:before, .carousel .inner .item:after
-{
-    content:"";
-    position:absolute;
-    z-index:-1;
-    box-shadow:0 0 20px rgba(0,0,0,0.8);
-    top:10px;
-    bottom:10px;
-    left:0;
-    right:0;
-    border-radius:100px / 10px;
-}
-
-.carousel .inner .item:after
-{
-    right:10px;
-    left:auto;
-    transform:skew(8deg) rotate(3deg);
-}
-
-.carousel .inner .item img {
+.carousel .item img {
     position: absolute;
     top: -100%;
     left: 0;
@@ -183,18 +162,19 @@ main {
     z-index: 0;
 }
 
-.carousel .inner .item .content {
+.carousel .item .content {
     overflow: hidden; 
     width: 100%; 
     height: 100%; 
     position: relative;
 }
-.carousel .inner .item .content h3 {
+
+.content h3 {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold;
     background: rgba(0, 0, 0, 0.8);
     color: rgba(255, 255, 255, 1);
@@ -204,33 +184,33 @@ main {
     z-index: 1;
 }
 
-.carousel .inner .item:nth-child(1) {
+.carousel .item:nth-child(1) {
     transform: scale(0.80);
     left: -115px;
     z-index: 0;
     opacity: 0.5;
 }
 
-.carousel .inner .item:nth-child(2) {
+.carousel .item:nth-child(2) {
     transform: scale(0.85);
     left: -60px;
     z-index: 1;
     opacity: 0.6;
 }
 
-.carousel .inner .item:nth-child(3) {
+.carousel .item:nth-child(3) {
     transform: scale(0.90);
     z-index: 2;
 }
 
-.carousel .inner .item:nth-child(4) {
+.carousel .item:nth-child(4) {
     transform: scale(0.85);
     right: -60px;
     z-index: 1;
     opacity: 0.6;
 }
 
-.carousel .inner .item:nth-child(5) {
+.carousel .item:nth-child(5) {
     transform: scale(0.80);
     right: -115px;
     z-index: 0;
@@ -245,6 +225,7 @@ main {
     justify-items: center;
     z-index: 5;
     opacity: 0;
+    transition: all 0.5s ease;
 }
 
 .carousel .controls .control {
@@ -273,6 +254,33 @@ main {
 
 /* Carousel styling end */
 
+/* General box shadow styling start */
+
+.box {
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+
+.box:before, .box:after
+{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    box-shadow: 0 0 20px rgba(0,0,0,0.8);
+    top: 10px;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    border-radius: 100px / 10px;
+}
+
+.box:after
+{
+    right: 10px;
+    left: auto;
+    transform: skew(8deg) rotate(3deg);
+}
+
+/* Box shadow styling end */
 .event_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -282,6 +290,39 @@ main {
 .event {
     background-color: darkgrey;
     height: 400px;
+    position: relative;
+    transition: all 0.5s ease;
+}
+
+.event:hover
+{
+    margin-top: -10px;
+    box-shadow: 0px 15px 15px -4px rgba(0, 0, 0, 0.7);
+}
+
+.event .content {
+    overflow: hidden; 
+    width: 100%; 
+    height: 100%; 
+    position: relative;
+}
+
+.event img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 0;
+}
+
+.event h3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    margin: 0;
+    z-index: 1;
 }
 
 /* explicitly using repeat grid syntax */
@@ -294,13 +335,11 @@ main {
 
 /* grid gallery and hover-opacity-box relative to size */
 .gallery {
-    width: 240px;
-    height: 240px;
     position: relative;
 } 
 
 /* image placement to cover entire box space */
-.gallery img{
+.gallery img {
     max-width: 100%;
     height: 240px;
     object-fit: cover;
@@ -333,7 +372,7 @@ main {
 /* hover box sized at 90% with opacity fadeout*/
 .gallery:hover .rides {
     opacity: 0.8;
-    width: 90%;
+    width: 100%;
     transition: all 0.5s ease;
 }
 
@@ -448,40 +487,3 @@ footer ul li a {
 }
 
 /* Footer styling end */
-
-/* Animation styling start */
-.border-animation:hover {
-    background-color: white;
-    border-radius: 10px;
-    position: relative;
-}
-.border-animation:hover:after {
-    content: "";
-    background: linear-gradient(45deg, #ccc 48.9%, #a52a2a 49%);
-    background-size: 300% 300%;
-    border-radius: 10px;
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    height: calc(100% + 10px);
-    width: calc(100% + 10px);
-    z-index: -1;
-    animation: borderGradient 2s linear both infinite;
-}
-@keyframes borderGradient {
-    0%,
-    100% {
-        background-position: 0% 100%;
-    }
-    50% {
-        background-position: 100% 0%;
-    }
-}
-
-.grow:hover
-{
-    -webkit-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    transform: scale(1.05);
-}
-/* Animation styling end */
