--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,11 @@ body {
     min-width: 1200px;
 }
   
+body.no_scroll {
+    height: 100vh;
+    overflow: hidden;
+}
+
 a {
     text-decoration: none;
 }
@@ -563,3 +568,76 @@ footer ul li a {
 }
 
 /* Footer styling end */
+/* Pop up styling start */
+
+.overlay {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 998;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.overlay.active {
+    display: flex;
+}
+
+.sign_up_form {
+    width: 400px;
+    height: 550px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    background: #fff;
+    padding: 20px;
+    margin: 8% auto 0;
+    text-align: center;
+    z-index: 999;
+}
+
+.sign_up_form img {
+    width: 50%;
+    margin-top: -25%;
+}
+
+.sign_up_form h1, h2 {
+    color: brown;
+    margin-bottom: 20px;
+}
+
+.sign_up_form hr {
+    margin-top: 20px;
+    width: 80%;
+}
+
+/* assign styling to input box */
+.input_box {
+    padding: 10px;
+    border-radius: 20px;
+    margin: 10 px 0;
+    width: 75%;
+    border: 1px solid #cccccc;
+    outline: none;
+}
+
+/* sign up form button styling */
+.sign_up_btn {
+    color: brown;
+    width: 80%;
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 15px;
+    margin: 10 px 0;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: #99b898;
+}
+
+/* Pop up styling end */
