--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 /*
  * Pirate logo: https://freebiesupply.com/logos/ecu-pirates-logo/
- * Social logos: TODO ADD URL
+ * Stock image attributions: Pixabay, Pexels, Unsplash
 */
 
-/* Font declarations */
+/* Font declarations start */
 
 @font-face {
     font-family: 'Vinque';
@@ -15,8 +15,11 @@
     src: url('../font/chewy/Chewy-Regular.ttf') format('truetype');
 }
 
+/* Font declarations end */
+
 /* General styling start */
 
+/* reset padding and margin, and set the base font family */
 html, body {
     padding: 0;
     margin: 0;
@@ -27,7 +30,7 @@ body {
     min-height: 100vh;
     min-width: 1200px;
 }
-  
+
 body.no_scroll {
     height: 100vh;
     overflow: hidden;
@@ -44,6 +47,8 @@ h1, h2, h3 {
 /* General styling end */
 
 /* Header styling start */
+
+/* This section contains the styling for the primary and utility menus, as well as the logo */
 
 header {
     position: absolute;
@@ -66,6 +71,7 @@ header nav {
     margin: 0 auto;
 }
 
+/* use flexbox to display the navigation items horizontally */
 header nav ul {
     display: flex;
     align-items: center;
@@ -122,7 +128,7 @@ header nav.utility ul li a {
     margin: 0 10px 0 10px;
 }
 
-.buy{
+.buy {
     background-color: #99b898;
     padding: 25px 0;
 }
@@ -135,6 +141,8 @@ header nav.utility ul li a {
 
 /* Main styling start */
 
+/* This section contains the varying styles for the contents of each page */
+
 main {
     padding: 20px;
     width: 1200px;
@@ -142,7 +150,7 @@ main {
     min-height: 80vh;
 }
 
-/* Carousel styling start */
+/* Home page carousel styling start */
 
 .carousel {
     width: 1200px;
@@ -266,7 +274,7 @@ main {
     right: 85px;
 }
 
-/* Carousel styling end */
+/* Home page carousel styling end */
 
 /* General box shadow styling start */
 
@@ -293,6 +301,9 @@ main {
 }
 
 /* Box shadow styling end */
+
+/* Home page event styling start */
+
 .event_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -335,6 +346,10 @@ main {
     margin: 0;
     z-index: 1;
 }
+
+/* Home page event styling end */
+
+/* Attraction page styling start */
 
 /* explicitly using repeat grid syntax */
 .attraction_container {
@@ -411,6 +426,10 @@ main {
     height: 240px;
 }
 
+/* Attraction page styling end */
+
+/* Ticket page styling start */
+
 /* explicitly using repeat grid syntax */
 .ticket_container {
     display: grid;
@@ -423,9 +442,7 @@ main {
     padding: 20px;
 }
 
-/*
- * add a different colour to each ticket type
- */
+/* add a different colour to each ticket type */
 .ticket-bronze {
     background-color: #a46628;
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
@@ -492,6 +509,8 @@ main {
     -ms-transition: background-color 500ms linear;
     transition: background-color 500ms linear;
 }
+
+/* Ticket page styling end */
 
 /* Main styling end */
 
@@ -568,6 +587,7 @@ footer ul li a {
 }
 
 /* Footer styling end */
+
 /* Pop up styling start */
 
 .overlay {
